--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
@@ -14,20 +16,95 @@
     <div class="main-grid">
         <div class="board">
             <h2>Elementos</h2>
+
+
             <div class="dropzone-elements">
-                <div class="card-elements" draggable="true">
-                    <ion-icon name="ellipsis-vertical-outline" class="mr-1"></ion-icon>
-                    <div class="cont ent">Header</div>
-                </div>
-                <div class="card-elements" draggable="true">
-                    <ion-icon name="ellipsis-vertical-outline" class="mr-1"></ion-icon>
-                    <div class="cont ent">Foto de Perfil</div>
-                </div>
-                <div class="card-elements" draggable="true">
-                    <ion-icon name="ellipsis-vertical-outline" class="mr-1"></ion-icon>
-                    <div class="cont ent">Redes Sociais</div>
+                <div class="card-element mb-3" draggable="true">
+                    <div class="accordion" id="accordionHeader">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingOne">
+                                <button
+                                    class="accordion-button"
+                                    type="button"
+                                    data-bs-toggle="collapse"
+                                    data-bs-target="#collapseOne"
+                                    aria-expanded="true"
+                                    aria-controls="collapseOne"
+                                >
+                                    <ion-icon name="ellipsis-vertical-outline" class="mr-1"></ion-icon>
+                                    Header
+                                </button>
+                            </h2>
+                            <div
+                                id="collapseOne"
+                                class="accordion-collapse collapse"
+                                aria-labelledby="headingOne"
+                                data-bs-parent="#accordionHeader"
+                            >
+                                <div class="accordion-body px-5">
+                                    <div class="d-flex justify-between align-items-center my-4">
+                                        <div class="d-flex w-100 align-items-center">
+                                            <span>Foto de Perfil</span>
+                                        </div>
+                                        <ion-icon class="btn-add" id="header" name="add-circle-outline"
+                                                  size="large"></ion-icon>
+                                    </div>
+                                    <div class="d-flex justify-between align-items-center my-4">
+                                        <div class="d-flex w-100 align-items-center">
+                                            <span>Texto</span>
+                                        </div>
+                                        <ion-icon class="btn-add" id="header" name="add-circle-outline"
+                                                  size="large"></ion-icon>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
+                <div class="card-element mb-3" draggable="true">
+                    <div class="accordion" id="accordionText">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="textOne">
+                                <button
+                                    class="accordion-button"
+                                    type="button"
+                                    data-bs-toggle="collapse"
+                                    data-bs-target="#collapseText"
+                                    aria-expanded="true"
+                                    aria-controls="collapseText"
+                                >
+                                    <ion-icon name="ellipsis-vertical-outline" class="mr-1"></ion-icon>
+                                    Texto
+                                </button>
+                            </h2>
+                            <div
+                                id="collapseText"
+                                class="accordion-collapse collapse"
+                                aria-labelledby="textOne"
+                                data-bs-parent="#accordionText"
+                            >
+                                <div class="accordion-body px-5">
+                                    <div class="d-flex justify-between align-items-center my-4">
+                                        <div class="d-flex w-100 align-items-center">
+                                            <span>Foto de Perfil</span>
+                                        </div>
+                                        <ion-icon class="btn-add" id="header" name="add-circle-outline"
+                                                  size="large"></ion-icon>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!--                <div class="card-element d-flex justify-between align-items-center" draggable="true">-->
+                <!--                    <div class="d-flex w-100 align-items-center">-->
+                <!--                        <ion-icon name="ellipsis-vertical-outline" class="mr-1"></ion-icon>-->
+                <!--                        <div class="cont ent">Header</div>-->
+                <!--                    </div>-->
+                <!--                    <ion-icon class="btn-add" id="header" name="add-circle-outline" size="large"></ion-icon>-->
+                <!--                </div>-->
             </div>
         </div>
     </div>
@@ -38,6 +115,12 @@
 </div>
 
 <script src="script.js" defer></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
