--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
                                 data-bs-parent="#accordionHeader"
                             >
                                 <div class="accordion-body px-5">
-                                    <div class="d-flex justify-between align-items-center my-4">
+                                    <div class="d-flex justify-between align-items-center my-4" data-element="profile-photo">
                                         <div class="d-flex w-100 align-items-center">
                                             <span>Foto de Perfil</span>
                                         </div>
                                         <ion-icon class="btn-add" id="header" name="add-circle-outline"
                                                   size="large"></ion-icon>
                                     </div>
-                                    <div class="d-flex justify-between align-items-center my-4">
+                                    <div class="d-flex justify-between align-items-center my-4" data-element="user-name">
                                         <div class="d-flex w-100 align-items-center">
-                                            <span>Texto</span>
+                                            <span>User Name</span>
                                         </div>
                                         <ion-icon class="btn-add" id="header" name="add-circle-outline"
                                                   size="large"></ion-icon>
@@ -85,9 +85,9 @@
                                 data-bs-parent="#accordionText"
                             >
                                 <div class="accordion-body px-5">
-                                    <div class="d-flex justify-between align-items-center my-4">
+                                    <div class="d-flex justify-between align-items-center my-4" data-element="bio">
                                         <div class="d-flex w-100 align-items-center">
-                                            <span>Foto de Perfil</span>
+                                            <span>Bio</span>
                                         </div>
                                         <ion-icon class="btn-add" id="header" name="add-circle-outline"
                                                   size="large"></ion-icon>
