--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -32,13 +32,13 @@
                             </h2>
                             <div id="collapseHeader" class="accordion-collapse collapse show" aria-labelledby="header"
                                  data-bs-parent="#accordionElements">
-                                <div class="accordion-body">
+                                <div class="accordion-body section-header">
                                     <div class="d-flex justify-between align-items-center my-4"
                                          data-element="profile-photo">
                                         <div class="d-flex w-100 align-items-center">
                                             <span>Foto de Perfil</span>
                                         </div>
-                                        <ion-icon class="btn-add" id="header" name="add-circle-outline"
+                                        <ion-icon class="btn-add" name="add-circle-outline"
                                                   size="large"></ion-icon>
                                     </div>
                                     <div class="d-flex justify-between align-items-center my-4"
@@ -46,13 +46,14 @@
                                         <div class="d-flex w-100 align-items-center">
                                             <span>User Name</span>
                                         </div>
-                                        <ion-icon class="btn-add" id="header" name="add-circle-outline"
+                                        <ion-icon class="btn-add" name="add-circle-outline"
                                                   size="large"></ion-icon>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+
                     <!-- TEXT -->
                     <div class="card-element" draggable="true">
                         <div class="accordion-item">
@@ -66,18 +67,19 @@
                             </h2>
                             <div id="collapseText" class="accordion-collapse collapse" aria-labelledby="text"
                                  data-bs-parent="#accordionExample">
-                                <div class="accordion-body">
+                                <div class="accordion-body section-text">
                                     <div class="d-flex justify-between align-items-center my-4" data-element="bio">
                                         <div class="d-flex w-100 align-items-center">
                                             <span>Bio</span>
                                         </div>
-                                        <ion-icon class="btn-add" id="header" name="add-circle-outline"
+                                        <ion-icon class="btn-add" name="add-circle-outline"
                                                   size="large"></ion-icon>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+
                     <!-- LINKS -->
                     <div class="card-element" draggable="true">
                         <div class="accordion-item">
@@ -91,21 +93,22 @@
                             </h2>
                             <div id="accordionLinks" class="accordion-collapse collapse" aria-labelledby="links"
                                  data-bs-parent="#accordionExample">
-                                <div class="accordion-body">
-                                    <div class="d-flex justify-between align-items-center my-4" data-element="bio">
+                                <div class="accordion-body section-links">
+                                    <div class="d-flex justify-between align-items-center my-4" data-element="links">
                                         <div class="w-100">
                                             <span>Links</span>
                                             <label>
-                                                <input type="text">
+                                                <input type="text" id="beacons-links">
                                             </label>
                                         </div>
-                                        <ion-icon class="btn-add" id="header" name="add-circle-outline"
+                                        <ion-icon class="btn-add" name="add-circle-outline"
                                                   size="large"></ion-icon>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+
                     <!-- EMAIL -->
                     <div class="card-element" draggable="true">
                         <div class="accordion-item">
@@ -119,21 +122,22 @@
                             </h2>
                             <div id="accordionEmail" class="accordion-collapse collapse" aria-labelledby="email"
                                  data-bs-parent="#accordionExample">
-                                <div class="accordion-body">
-                                    <div class="d-flex justify-between align-items-center my-4" data-element="bio">
+                                <div class="accordion-body section-email">
+                                    <div class="d-flex justify-between align-items-center my-4" data-element="email">
                                         <div class="w-100">
                                             <span>Email</span>
                                             <label>
-                                                <input type="text">
+                                                <input type="email" id="beacons-email">
                                             </label>
                                         </div>
-                                        <ion-icon class="btn-add" id="header" name="add-circle-outline"
+                                        <ion-icon class="btn-add" name="add-circle-outline"
                                                   size="large"></ion-icon>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+
                     <!-- TWEET -->
                     <div class="card-element" draggable="true">
                         <div class="accordion-item">
@@ -147,21 +151,22 @@
                             </h2>
                             <div id="accordionTweet" class="accordion-collapse collapse" aria-labelledby="tweet"
                                  data-bs-parent="#accordionExample">
-                                <div class="accordion-body">
-                                    <div class="d-flex justify-between align-items-center my-4" data-element="bio">
+                                <div class="accordion-body section-tweet">
+                                    <div class="d-flex justify-between align-items-center my-4" data-element="tweet">
                                         <div class="w-100">
                                             <span>tweet</span>
                                             <label>
-                                                <input type="text">
+                                                <input type="text" id="beacons-tweet">
                                             </label>
                                         </div>
-                                        <ion-icon class="btn-add" id="header" name="add-circle-outline"
+                                        <ion-icon class="btn-add" name="add-circle-outline"
                                                   size="large"></ion-icon>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+
                     <!-- VIDEO -->
                     <div class="card-element" draggable="true">
                         <div class="accordion-item">
@@ -175,21 +180,22 @@
                             </h2>
                             <div id="accordionVideo" class="accordion-collapse collapse" aria-labelledby="video"
                                  data-bs-parent="#accordionExample">
-                                <div class="accordion-body">
-                                    <div class="d-flex justify-between align-items-center my-4" data-element="bio">
+                                <div class="accordion-body section-video">
+                                    <div class="d-flex justify-between align-items-center my-4" data-element="video">
                                         <div class="w-100">
                                             <span>video</span>
                                             <label>
-                                                <input type="text">
+                                                <input type="text" id="beacons-video">
                                             </label>
                                         </div>
-                                        <ion-icon class="btn-add" id="header" name="add-circle-outline"
+                                        <ion-icon class="btn-add" name="add-circle-outline"
                                                   size="large"></ion-icon>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+
                     <!-- MUSIC -->
                     <div class="card-element" draggable="true">
                         <div class="accordion-item">
@@ -203,15 +209,15 @@
                             </h2>
                             <div id="accordionMusic" class="accordion-collapse collapse" aria-labelledby="music"
                                  data-bs-parent="#accordionExample">
-                                <div class="accordion-body">
-                                    <div class="d-flex justify-between align-items-center my-4" data-element="bio">
+                                <div class="accordion-body section-music">
+                                    <div class="d-flex justify-between align-items-center my-4" data-element="music">
                                         <div class="w-100">
                                             <span>music</span>
                                             <label>
-                                                <input type="text">
+                                                <input type="text" id="beacons-music">
                                             </label>
                                         </div>
-                                        <ion-icon class="btn-add" id="header" name="add-circle-outline"
+                                        <ion-icon class="btn-add" name="add-circle-outline"
                                                   size="large"></ion-icon>
                                     </div>
                                 </div>
