feat(geral): add novas funcionalidades

--- a/index.html
+++ b/index.html
@@ -201,7 +201,9 @@
         <div class="result-grid pt-5">
             <div class="sticky-top">
                 <div class="h-100 pt-5 d-flex justify-content-center align-items-center">
-                    <div class="dropzone-result mt-5">
+                    <div class="border-result mt-5">
+                        <div class="dropzone-result ">
+                        </div>
                     </div>
                 </div>
             </div>
