--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <title>Beacons</title>
 </head>
 
@@ -198,11 +198,11 @@
                 </div>
             </div>
         </div>
-        <div class="result-grid pt-5">
+        <div class="preview-grid pt-5">
             <div class="sticky-top">
                 <div class="h-100 pt-5 d-flex justify-content-center align-items-center">
-                    <div class="border-result mt-5">
-                        <div class="dropzone-result ">
+                    <div class="border-preview mt-5">
+                        <div class="dropzone-preview ">
                         </div>
                     </div>
                 </div>
