feat(geral): add profile photo

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                                         <div class="d-flex justify-between align-items-center my-4" data-element="profile-photo">
                                             <div class="d-flex w-100 align-items-center">
                                                 <span>Foto de Perfil</span>
+                                                <input type="file" name="profile-photo" id="beacons-profile-photo">
                                             </div>
                                             <ion-icon class="btn-add" name="add-circle-outline" size="large"></ion-icon>
                                         </div>
@@ -62,6 +63,9 @@
                                         <div class="d-flex justify-between align-items-center my-4" data-element="bio">
                                             <div class="d-flex w-100 align-items-center">
                                                 <span>Bio</span>
+                                                <label>
+                                                    <input type="text" id="beacons-bio">
+                                                </label>
                                             </div>
                                             <ion-icon class="btn-add" name="add-circle-outline" size="large"></ion-icon>
                                         </div>
