--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                                 </h2>
                                 <div id="collapseHeader" class="accordion-collapse collapse show" aria-labelledby="header" data-bs-parent="#accordionElements">
                                     <div class="accordion-body section-header">
-                                        <div class="d-flex justify-between align-items-center my-4" data-element="profile-photo">
+                                        <div class="d-flex justify-between align-items-center my-4 gap-5" data-element="profile-photo">
                                             <div class="w-100 align-items-center">
                                                 <label for="beacons-profile-photo" class="form-label">Foto de Perfil</label>
                                                 <input class="form-control" type="file" id="beacons-profile-photo">
@@ -94,7 +94,7 @@
                                                     <input class="form-control" type="text" id="beacons-link-value">
                                                 </div>
                                             </div>
-                                            
+
                                             <ion-icon class="btn-add" name="add-circle-outline" size="large"></ion-icon>
                                         </div>
                                     </div>
